# CMakeQT-CustomWindow

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  qt5-linux.natvis
BaseModule/: CMakeLists.txt  basemodule_global.h
BaseModule/BaseWidget/: IQBaseWindow.h  QBaseConfig.h  QBaseDialog.cpp  QBaseDialog.h  QBaseDialog.ui  QBaseMask.cpp  QBaseMask.h  QBasePara.h  QBaseTitleBar.cpp  QBaseTitleBar.h  QBaseWindow  QBaseWindow.cpp  QBaseWindow.ui  QStyleHelper.cpp  QStyleHelper.h  qbasewindow.h
BaseModule/BaseWidget/dark/: darkstyle.qrc  darkstyle.qss
BaseModule/BaseWidget/icon/: icon.qrc
BaseModule/BaseWidget/light/: lightstyle.qrc  lightstyle.qss
GUI/: CMakeLists.txt  GUIMain.cpp  GUIMain.h  gui_global.h
GUI/Demo/: QWindowDemo.cpp  QWindowDemo.h  QWindowDemo.ui  QWindowTest.cpp  QWindowTest.h  QWindowTest.ui  QtClassTest.h
Main/: CMakeLists.txt  main.cpp
